<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#192858"
    tools:context=".registro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box_icon_registro"
        android:layout_width="411dp"
        android:layout_height="88dp"
        android:layout_marginTop="4dp"
        android:background="#141F47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="16dp"
            android:text="@string/Registro_info"
            android:textColor="#EFF2F5"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="68dp"
            android:layout_height="53dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:contentDescription="@string/descripcion_icono_registro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box_elementos"
        android:layout_width="394dp"
        android:layout_height="611dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_icon_registro">

        <EditText
            android:id="@+id/txt_nombre_registro"
            android:layout_width="364dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/txt_nombre"
            android:inputType="textPersonName"
            android:textColorHint="#AEE2E9"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_apellido_registro"
            android:layout_width="366dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/txt_apellido"
            android:inputType="textPersonName"
            android:textColorHint="#AEE2E9"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre_registro" />

        <EditText
            android:id="@+id/txt_correo_registro"
            android:layout_width="362dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/txt_correo"
            android:inputType="textEmailAddress"
            android:textColorHint="#AEE2E9"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_apellido_registro" />

        <EditText
            android:id="@+id/txt_contraseña_registro"
            android:layout_width="364dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/txt_contraseña"
            android:inputType="textPassword"
            android:textColorHint="#AEE2E9"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_correo_registro" />

        <EditText
            android:id="@+id/txt_confirmar_registro"
            android:layout_width="367dp"
            android:layout_height="62dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/txt_recontraseña"
            android:inputType="textPassword"
            android:textColorHint="#AEE2E9"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_contraseña_registro" />

        <Button
            android:id="@+id/button2"
            android:layout_width="155dp"
            android:layout_height="63dp"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="28dp"
            android:background="#2a93ff"
            android:onClick="a_menu"
            android:text="@string/btn_guardar"
            android:textColor="#DBE4E4"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_confirmar_registro" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>